Remove sort by rating from filter bar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -180,43 +180,49 @@
   <div class="row category">
     <!-- Bedroom -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
-      <a href="{% url 'products' %}?category=beds,nightstands,dressers">
+      <a class="category-card" href="{% url 'products' %}?category=beds,nightstands,dressers">
         <img src="{{ MEDIA_URL }}bed.jpg" class="imagebuttons" alt="Bedroom">
+        <div class="hide centered p-3">See More</div>
         <p class="mt-2 mb-4">Bedroom</p>
       </a>
     </div>
     <!-- Living room -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
-      <a href="{% url 'products' %}?category=sofas,chairs,tables">
+      <a class="category-card" href="{% url 'products' %}?category=sofas,chairs,tables">
         <img src="{{ MEDIA_URL }}sofa.jpg" class="imagebuttons" alt="Living room">
+        <div class="hide centered p-3">See More</div>
         <p class="mt-2 mb-4">Living room</p>
       </a>
     </div>
     <!-- Dining room -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
-      <a href="{% url 'products' %}?category=dining_chairs,dining_tables,bars">
+      <a class="category-card" href="{% url 'products' %}?category=dining_chairs,dining_tables,bars">
         <img src="{{ MEDIA_URL }}diningroom.jpg" class="imagebuttons" alt="Dining room">
+        <div class="hide centered p-3">See More</div>
         <p class="mt-2 mb-4">Dining room</p>
       </a>
     </div>
     <!-- Office -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
-      <a href="{% url 'products' %}?category=desks,bookcases,office_chairs">
+      <a class="category-card" href="{% url 'products' %}?category=desks,bookcases,office_chairs">
         <img src="{{ MEDIA_URL }}office.jpg" class="imagebuttons" alt="Office">
+        <div class="hide centered p-3">See More</div>
         <p class="mt-2 mb-4">Office</p>
       </a>
     </div>
     <!-- Garden -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
-      <a href="{% url 'products' %}?category=garden_tables,garden_chairs,garden_sofas">
+      <a class="category-card" href="{% url 'products' %}?category=garden_tables,garden_chairs,garden_sofas">
         <img src="{{ MEDIA_URL }}garden.jpg" class="imagebuttons" alt="Garden">
+        <div class="hide centered p-3">See More</div>
         <p class="mt-2 mb-4">Garden</p>
       </a>
     </div>
     <!-- Specials -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
-      <a href="#">
-        <img src="{{ MEDIA_URL }}onsale.jpg" class="imagebuttons" alt="Specials">
+      <a class="category-card" href="#">
+        <img src="{{ MEDIA_URL }}bar1.png" class="imagebuttons" alt="Specials">
+        <div class="hide centered p-3">See More</div>
         <p class="mt-2 mb-4">Specials</p>
       </a>
     </div>
