make pages responsive for medium devices

--- a/inspo/templates/inspo/inspo.html
+++ b/inspo/templates/inspo/inspo.html
@@ -17,9 +17,8 @@
                 <h2 class="page-banner text-white mt-4 mb-4">Inspo Items</h2>
             </div>
         </div>
-            <div class="row">
                 <div class="container">
-                    <div class="row">
+                    <div class="row justify-content-center">
                         {% for inspo_item in inspo_items_published %}
                             <div class="col-sm-12 col-md-12 col-lg-6 mb-5">
                                 <div class="mt-3">
