--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
@@ -90,7 +90,7 @@
             </div>
         </div>
         <!-- Tab links -->
-        <div id="listing-description" class="col-md-8 offset-lg-2">
+        <div id="listing-description" class="col-12 col-lg-8 offset-lg-2">
             <div class="tab">
                 <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Reviews')">Reviews</button>
                 <button class="tablinks font-weight-bold d-flex" onclick="openContent(event, 'Write_a_review')">Write a review</button>
