--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 <!-- Home banner -->
 <section class="text-center container-fluid">
     <div class="row">
-      <div class="col-12 col-lg-4 d-none d-lg-block home-banner mt-5">
+      <div class="col-12 col-lg-4 d-lg-block home-banner mt-5">
         <div class="mt-5">
           <h1>Want to decorate?</h1>
           <p>Browse through our collection of furniture</p>
@@ -16,7 +16,7 @@
           </a>
         </div>
       </div>
-      <div class="col-12 col-lg-8 d-none d-lg-block home-banner-image mt-5">
+      <div class="col-12 col-lg-8 d-lg-block home-banner-image mt-5">
         <a href="#">
           <img src="{{ MEDIA_URL }}myhome.jpg" alt="Home banner">
         </a>
