--- a/inspo/templates/inspo/add_inspo_item.html
+++ b/inspo/templates/inspo/add_inspo_item.html
@@ -15,7 +15,7 @@
 <div class="overlay"></div>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-lg-6">
             <h2 class="page-banner text-white mt-4 mb-4">Inspo Management</h2>
         </div>
     </div>
@@ -37,8 +37,8 @@
                                 <div class="text-center mt-2">
                                     <p class="mt-0">*Select 'Draft' to save the inspo item for later or select 'Publish' to publish on the
                                         site.</p>
-                                    <a class="btn btn-outline-black mb-5" href="{% url 'inspo_items' %}">Cancel</a>
-                                    <button class="btn btn-outline-black mb-5" type="submit">Add inspo Item</button>
+                                    <a class="btn btn-outline-black mt-3 mb-5" href="{% url 'inspo_items' %}">Cancel</a>
+                                    <button class="btn btn-outline-black mt-3 mb-5" type="submit">Add inspo Item</button>
                                 </div>
                             </form>
                         </div>
