--- a/inspo/templates/inspo/edit_inspo_item.html
+++ b/inspo/templates/inspo/edit_inspo_item.html
@@ -15,7 +15,7 @@
 <div class="overlay"></div>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-lg-6">
             <h2 class="page-banner text-white mt-4 mb-4">Inspo Management</h2>
         </div>
     </div>
@@ -35,8 +35,8 @@
                             {% endif %}
                             {% endfor %}
                             <div class="text-center pb-3">
-                                <a class="btn btn-outline-black" href="{% url 'manage_inspo_items' %}">Cancel</a>
-                                <button class="btn btn-outline-black" type="submit">Save Changes</button>
+                                <a class="btn btn-outline-black mt-3" href="{% url 'manage_inspo_items' %}">Cancel</a>
+                                <button class="btn btn-outline-black mt-3" type="submit">Save Changes</button>
                             </div>
                         </form>
                     </div>
