--- a/inspo/templates/inspo/inspo_item.html
+++ b/inspo/templates/inspo/inspo_item.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block extra_title %}inspo Item{% endblock %}
+
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -9,6 +10,7 @@
     </div>
 </div>
 {% endblock %}
+
 {% block content %}
     <div class="overlay"></div>
         <div class="section-holder">
@@ -26,7 +28,7 @@
                 </div>
                 <div class="container">
                     <div class="row justify-content-center">
-                        <div class="col col-md-6">
+                        <div class="col-12 col-lg-6">
                             <div class="my-2">
                                 <h2 class="card-text mb-4 pt-4 text-center">{{ inspo_item.title}}</h2>
                                 <p class="card-text">{{ inspo_item.inspo_item_text }}</p>
