--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -1,6 +1,6 @@
 {% if reviews.count > 0 %}
     {% for review in reviews %}
-        <div id="Reviews" class="tabcontent col-12 col-md-8 offset-lg-2 mb-3">
+        <div id="Reviews" class="tabcontent col-12 col-lg-8 offset-lg-2 mb-3">
             <h4 class="mt-3">{{ review.title }}</h4>
             <p class="user-review"> By {{ review.user }} on {{ review.date_created }}</p>
             <p>{{ review.description }}</p>  
@@ -62,7 +62,7 @@
     </div>          
 {% endif %}                 
 
-<div id="Write_a_review" class="tabcontent col-12 col-md-8 offset-lg-2 mb-3">
+<div id="Write_a_review" class="tabcontent col-12 col-lg-8 offset-lg-2 mb-3">
     {% if request.user.is_authenticated and review_form != None %}
         <form class="form mt-3" action="{% url 'add_review' product.pk %}" method="POST">
             {% csrf_token %}
