--- a/inspo/templates/inspo/inspo.html
+++ b/inspo/templates/inspo/inspo.html
@@ -17,10 +17,10 @@
                 <h2 class="page-banner text-white mt-4 mb-4">Inspo Items</h2>
             </div>
         </div>
-                <div class="container">
+                <div class="container-inspo">
                     <div class="row justify-content-center">
                         {% for inspo_item in inspo_items_published %}
-                            <div class="col-sm-12 col-md-12 col-lg-6 mb-5">
+                            <div class="col-12 col-md-6 mb-5">
                                 <div class="mt-3">
                                     <div>
                                         {% if inspo_item.image %}
