--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -4,7 +4,7 @@
     <div class="container header-container">
         <div class="overlay"></div>
         <div class="row justify-content-center">
-            <div class="col-6">
+            <div class="col-12 col-lg-6">
                 <div class="allauth-form-inner-content">
                     {% block inner_content %}
                     {% endblock %}
