--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -110,7 +110,7 @@
       <div class="mt-3">
           <div>
             <a href="#">
-              <img class="inspo-card" src="{{ MEDIA_URL }}inspo2.png" alt=""/>
+              <img class="inspo-card-home" src="{{ MEDIA_URL }}inspo2.png" alt=""/>
             </a>    
           </div>
           <div>
@@ -123,7 +123,7 @@
       <div class="mt-3">
           <div>
             <a href="#">
-              <img class="inspo-card" src="{{ MEDIA_URL }}inspo6.png" alt=""/>
+              <img class="inspo-card-home" src="{{ MEDIA_URL }}inspo6.png" alt=""/>
             </a>    
           </div>
           <div>
@@ -131,11 +131,23 @@
           </div>
       </div>
     </div>
+    <div class="col-sm-12 col-md-6 col-lg-4 mb-5 d-lg-none">
+      <div class="mt-3">
+          <div>
+            <a href="#">
+              <img class="inspo-card-home" src="{{ MEDIA_URL }}inspo5.png" alt=""/>
+            </a>    
+          </div>
+          <div>
+            <a class="inspo-title" href="#">A smart, small home workspace in the hallway</a>
+          </div>
+      </div>
+    </div>
     <div class="col-sm-12 col-md-6 col-lg-4 mb-5">
       <div class="mt-3">
           <div>
             <a href="#">
-              <img class="inspo-card" src="{{ MEDIA_URL }}inspo4.png" alt=""/>
+              <img class="inspo-card-home" src="{{ MEDIA_URL }}inspo4.png" alt=""/>
             </a>    
           </div>
           <div>
@@ -161,7 +173,7 @@
       </a>
     </div>
     <div class="col-12 col-md-7 d-md-block onsale-banner mt-5">
-      <div class="mt-5">
+      <div>
         <h1>Sale now on!</h1>
         <p>Shop online, or in store to get everything you need</p>
       </div>
