--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -7,9 +7,7 @@
 
 
 {% block inner_content %}
-<hr>
-<h2 class="logo-font mb-4">{% trans "Confirm E-mail Address" %}</h2>
-<hr>
+<h2 class="page-banner text-white mt-4 mb-4">{% trans "Confirm E-mail Address" %}</h2>
 
 {% if confirmation %}
 
