--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,8 +4,6 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block inner_content %}
-    <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
-    <hr>
+    <h2 class="page-banner text-white mt-4 mb-4">{% trans "Change Password" %}</h2>
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
