Style review buttons on products page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -227,7 +227,7 @@
     </div>
     <!-- Specials -->
     <div class="col-6 col-md-4 col-lg-2 text-center">
-      <a class="category-card" href="#">
+      <a class="category-card" href="{% url 'products' %}?category=all_specials">
         <img src="{{ MEDIA_URL }}bar1.png" class="imagebuttons" alt="Specials">
         <p class="mt-2 mb-4">Specials</p>
       </a>
