--- a/inspo/templates/inspo/inspo_item.html
+++ b/inspo/templates/inspo/inspo_item.html
@@ -29,7 +29,7 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-12 col-lg-6">
-                            <div class="my-2">
+                            <div class="my-2 card-text">
                                 <h2 class="card-text mb-4 pt-4 text-center">{{ inspo_item.title}}</h2>
                                 <p class="card-text">{{ inspo_item.inspo_item_text }}</p>
                                 <hr>
