--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -75,13 +75,8 @@
         <p class="mt-3">You have already reviewed this product!</p>  
         <hr>            
     {% else %}  
-        <div class="d-flex justify-content-center">
-            <p>Please log in or sign up to leave a review</p>
-        </div>
-        <div class="col-12 d-flex justify-content-center mt-2 mb-5">
-            <a class="btn btn-outline-black mr-3" href="{% url 'account_login' %}">Log In</a>
-            <a class="btn btn-outline-black" href="{% url 'account_signup' %}">Sign Up</a>
-            <hr>
-        </div>                 
+        <p class="mt-3">Please log in or sign up to leave a review</p>
+        <a class="btn btn-outline-black mb-4" href="{% url 'account_login' %}">Log In</a>
+        <a class="btn btn-outline-black mb-4" href="{% url 'account_signup' %}">Sign Up</a>              
     {% endif %}
 </div>
