--- a/static/css/base.css
+++ b/static/css/base.css
@@ -587,6 +587,10 @@ margin: 2rem 0;
         margin-top: 20px;
     }
     
+    button.navbar-toggler.collapsed {
+        text-decoration: none;
+    }
+
     .inspo-card {
         width: 270px;
         border: 0;
