Add links to inspo pages on thhe home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -114,7 +114,7 @@
             </a>    
           </div>
           <div>
-            <a class="inspo-title" href="#">A touch of love is all it takes
+            <a class="inspo-title" href="{% url 'inspo_item' 6 %}">A touch of love is all it takes
             </a>
           </div>
       </div>
@@ -127,7 +127,7 @@
             </a>    
           </div>
           <div>
-            <a class="inspo-title" href="#">A dining room that’s ready for everything</a>
+            <a class="inspo-title" href="{% url 'inspo_item' 11 %}">A dining room that’s ready for everything</a>
           </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
             </a>    
           </div>
           <div>
-            <a class="inspo-title" href="#">A smart, small home workspace in the hallway</a>
+            <a class="inspo-title" href="{% url 'inspo_item' 10 %}">A smart, small home workspace in the hallway</a>
           </div>
       </div>
     </div>
@@ -151,7 +151,7 @@
             </a>    
           </div>
           <div>
-            <a class="inspo-title" href="#">A serene green bedroom</a>
+            <a class="inspo-title" href="{% url 'inspo_item' 9 %}">A serene green bedroom</a>
           </div>
       </div>
     </div>
