--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -64,7 +64,7 @@ Bag
                                                     <div class="input-group-prepend">
                                                         <button
                                                             class="decrement-qty btn btn-sm btn-outline-black rounded-0"
-                                                            data-item_id="{{ item.item_id }}"
+                                                            data-item_id="{{ item.product_id }}"
                                                             id="decrement-qty_{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
@@ -73,7 +73,7 @@ Bag
                                                     </div>
                                                     <input class="qty_input" type="number" name="quantity"
                                                         value="{{ item.quantity }}" min="1" max="99"
-                                                        data-item_id="{{ item.item_id }}"
+                                                        data-item_id="{{ item.product_id }}"
                                                         id="id_qty_{{ item.item_id }}">
                                                     <div class="input-group-append">
                                                         <button
@@ -122,17 +122,17 @@ Bag
                         <h2 class="cart-card-header text-center">Bag total</h2>
                         <ul class="list-unstyled">
                             <li class="d-flex align-items-center justify-content-between upper-text">Bag
-                                Total<span>£{{ total|floatformat:2 }}</span></li>
+                                Total<span>${{ total|floatformat:2 }}</span></li>
                             <li class="d-flex align-items-center justify-content-between upper-text">
-                                Delivery<span>£{{ delivery|floatformat:2 }}</span></li>
+                                Delivery<span>${{ delivery|floatformat:2 }}</span></li>
                             <li class="border-bottom my-2"></li>
                             <li class="d-flex align-items-center justify-content-between mb-4 upper-text">Grand
-                                Total<span>£{{ grand_total|floatformat:2 }}</span></li>
+                                Total<span>${{ grand_total|floatformat:2 }}</span></li>
                         </ul>
                         {% if free_delivery_delta > 0 %}
                         <div class="card-footer text-center">
                             <p>Free delivery if you spend <strong
-                                    class="card-footer-text">£{{ free_delivery_delta }}</strong> more!</p>
+                                    class="card-footer-text">${{ free_delivery_delta }}</strong> more!</p>
                         </div>
                         {% endif %}
                     </div>
