Add home button to collapsed navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -583,7 +583,7 @@ margin: 2rem 0;
         max-width: 100%;
       }
 
-    .nav-item #all-products-link {
+    .nav-item #home-link {
         margin-top: 20px;
     }
     
