--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -64,7 +64,7 @@ Bag
                                                     <div class="input-group-prepend">
                                                         <button
                                                             class="decrement-qty btn btn-sm btn-outline-black rounded-0"
-                                                            data-item_id="{{ item.product_id }}"
+                                                            data-item_id="{{ item.item_id }}"
                                                             id="decrement-qty_{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-minus fa-sm"></i>
@@ -73,12 +73,12 @@ Bag
                                                     </div>
                                                     <input class="qty_input" type="number" name="quantity"
                                                         value="{{ item.quantity }}" min="1" max="99"
-                                                        data-item_id="{{ item.product_id }}"
+                                                        data-item_id="{{ item.item_id }}"
                                                         id="id_qty_{{ item.item_id }}">
                                                     <div class="input-group-append">
                                                         <button
                                                             class="increment-qty btn btn-sm btn-outline-black rounded-0"
-                                                            data-item_id="{{ item.product_id }}"
+                                                            data-item_id="{{ item.item_id }}"
                                                             id="increment-qty_{{ item.item_id }}">
                                                             <span>
                                                                 <i class="fas fa-plus fa-sm"></i>
