Add content too modals on the home pag

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -60,9 +60,7 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate exercitationem quasi fuga. 
-              Autem nobis dolore eveniet impedit dolorum assumenda cupiditate ab quas enim reiciendis. 
-              Saepe fugiat perferendis itaque voluptatem quis!
+              If you spend $200 or more we will deliver your goods for free!
             </div>
           </div>
         </div>
@@ -76,9 +74,8 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate exercitationem quasi fuga. 
-              Autem nobis dolore eveniet impedit dolorum assumenda cupiditate ab quas enim reiciendis. 
-              Saepe fugiat perferendis itaque voluptatem quis!
+              When ordering products, please let us know if you need home installation for certain prodducts. 
+              This service does come at a fee. 
             </div>
           </div>
         </div>
@@ -92,9 +89,8 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate exercitationem quasi fuga. 
-              Autem nobis dolore eveniet impedit dolorum assumenda cupiditate ab quas enim reiciendis. 
-              Saepe fugiat perferendis itaque voluptatem quis!
+              Kick back, relax, and enjoy your Joybird pieces - each one of our manufactured pieces comes 
+              with a lifetime warranty on all foundational elements.
             </div>
           </div>
         </div>
