--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -31,7 +31,7 @@
                     <h4 class="mb-0 font-weight-bold">
                         {{ product.name }}
                         {% if is_product_in_wishlist %}
-                            <a href="{% url 'remove_product_from_wishlist' product.id 'product' %}" aria-label="remove product from wishlist" class="wishlist wishlist-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
+                            <a href="{% url 'remove_product_from_wishlist' item.id 'product' %}" aria-label="remove product from wishlist" class="wishlist wishlist-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
                         {% else %}
                             <a href="{% url 'add_product_to_wishlist' product.id %}" aria-label="add product to wishlist" class="wishlist text-danger ml-3"><i class="far fa-heart"></i></a>
                         {% endif %}
