--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -60,14 +60,7 @@
                             </a>
                             {% endif %}
                             <div class="card-body pb-0">
-                                <p class="mb-0 text-black font-weight-bold">
-                                    {{ product.name }}
-                                    {% if is_product_in_wishlist %}
-                                        <a href="{% url 'remove_product_from_wishlist' product.id 'product' %}" aria-label="remove product from wishlist" class="wishlist wishlist-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
-                                    {% else %}
-                                        <a href="{% url 'add_product_to_wishlist' product.id %}" aria-label="add product to wishlist" class="wishlist text-danger ml-3"><i class="far fa-heart"></i></a>
-                                    {% endif %}
-                                </p>
+                                <p class="mb-0 text-black font-weight-bold">{{ product.name }}</p>
                             </div>
                             <div class="card-footer bg-white pt-0 border-0 text-left">
                                 <div class="row mb-5">
