--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -56,7 +56,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="Modal-1"><i class="far fa-money-bill-alt"></i> Free Delivery over $200</h5>
+              <h5 class="modal-title"><i class="far fa-money-bill-alt"></i> Free Delivery over $200</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -70,7 +70,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="Modal-2"><i class="fas fa-box"></i> Home installation</h5>
+              <h5 class="modal-title"><i class="fas fa-box"></i> Home installation</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -85,7 +85,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="Modal-3"><i class="fas fa-people-carry"></i> Lifetime warranty</h5>
+              <h5 class="modal-title"><i class="fas fa-people-carry"></i> Lifetime warranty</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
