--- a/static/css/base.css
+++ b/static/css/base.css
@@ -34,10 +34,16 @@ hr {
     background-color: #F6F6F6;
 }
 
-footer h5, h2 {
+footer h5 {
     font-weight: bolder;
     color: black; 
     text-decoration: none;
+}
+
+a.nav-link.main-logo-link {
+    text-decoration: none;
+    color: black; 
+    margin-left: 15px;
 }
 
 footer i {
