--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,20 +3,26 @@
         <div class="col-12 col-sm-6 col-lg-3 footer-link">
             <ul>
                 <li><a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-uppercase mt-4"><strong>Kassie</strong></h2>
+                    <h3 class="logo-font text-uppercase mt-5">Kassie</h3>
                 </a></li>
-                <li><a class="social-icon" href="https://www.facebook.com/" target="_blank">
-                    <i class="fab fa-facebook-square fa-2x ml-5"></i>
-                </a></li>
-                <li><a class="social-icon" href="https://www.instagram.com/" target="_blank">
-                    <i class="fab fa-instagram-square fa-2x ml-3"></i>
-                </a></li>
-                <li><a class="social-icon" href="https://www.pinterest.com/" target="_blank">
-                    <i class="fab fa-pinterest-square fa-2x ml-5"></i>
-                </a></li>
-                <li><a class="social-icon" href="https://twitter.com/" target="_blank">
-                    <i class="fab fa-twitter-square fa-2x ml-3"></i>
-                </a></li>
+                <div class="col">
+                    <li class="list-inline-item"><a class="social-icon" href="https://www.facebook.com/" target="_blank">
+                        <i class="fab fa-facebook-square fa-2x ml-5"></i>
+                    </a></li>
+                    <li class="list-inline-item"><a class="social-icon" href="https://www.instagram.com/" target="_blank">
+                        <i class="fab fa-instagram-square fa-2x ml-3"></i>
+                    </a></li>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <li class="list-inline-item"><a class="social-icon" href="https://www.pinterest.com/" target="_blank">
+                            <i class="fab fa-pinterest-square fa-2x ml-5"></i>
+                        </a></li>
+                        <li class="list-inline-item"><a class="social-icon" href="https://twitter.com/" target="_blank">
+                            <i class="fab fa-twitter-square fa-2x ml-3"></i>
+                        </a></li>
+                    </div>
+                </div> 
             </ul>
         </div>
         <div class="col-12 col-sm-6 col-lg-3 footer-link">
